# NetWorth

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish-notes.yml  release.yml
data/: banks_in.csv  bullion_proxies.csv  epf_rates.csv  fmv_2018-01-31.csv  ppf_rates.csv  restructures.csv  seed_mf_master.csv  seed_nps_master.csv  seed_stock_master.csv  tax_rules_in.csv
docs/: PLAN-v1.2.md  PLAN.md  RELEASES.md  ROADMAP.md  SPEC.md  USER-GUIDE.md
docs/release-notes/: v1.0.0-rc.1.md  v1.0.0-rc.2.md  v1.1.0.md  v1.2.0.md  v1.3.0.md  v1.4.0.md  v1.4.1.md  v1.4.2.md  v1.4.3.md  v1.5.0.md  v1.5.1.md  v1.6.0.md  v1.6.1.md  v1.6.2.md  v1.7.0.md  v1.7.1.md
legacy/: Family_Portfolio_Tracker.xlsx  README.txt  UpdateFundMaster.bat  UpdateFundMaster.ps1  UpdateNAV.bat  UpdateNAV.ps1  UpdatePrices.bat  UpdatePrices.ps1
packaging/: README-enduser.txt  README-nowine.txt  Update Portfolio.command  build-release.bat  build-release.sh  build-windows-nowine.sh  networth-update.spec  update_portfolio.py
scripts/: publish_release_notes.py
scripts/guide_screenshots/: import_transcript.py  rasterize.py  render.sh  uno_export.py
src/networth/: __init__.py  _packaged.py  crypto.py  generate.py  guide_text.py  model.py  reader.py  sample_data.py  update.py
src/networth/compute/: capital_gains.py  cashflows.py  ppf.py  projections.py  restructures.py  snapshot.py  xirr.py
src/networth/fetch/: amfi.py  bhavcopy.py  bullion.py  corporate_actions.py  nps.py
tests/: conftest.py  test_add_person.py  test_fetch_parsers.py  test_generate.py  test_history.py  test_packaged.py  test_ppf.py  test_r10_settings.py  test_r11_allocation.py  test_r12_wave1.py  test_r13_wave2.py  test_r14_restructures.py  test_r5_features.py  test_r6_features.py  test_r7_corporate_actions.py  test_r8_dual_source.py  test_r9_dividends.py  test_review_fixes.py  test_roundtrip.py  test_update.py  test_update_check.py  test_v142_polish.py  test_v143_calm.py  test_v14_polish.py  test_v150_privacy.py  test_v151_gloss.py  test_v160_capgains.py  test_v160_dividend_xirr.py  test_v162_stability.py  test_v170_import.py  test_v170_review_fixes.py  test_v170_statement_variants.py  test_v171_import_fixes.py  test_xirr.py
(+6 files in other folders)
