[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "networth"
version = "1.7.0"
description = "Local-only family portfolio tracker — Excel workbook generator and updater"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "xlsxwriter>=3.2",
    "openpyxl>=3.1",
    "requests>=2.31",
    "truststore>=0.9",
    "msoffcrypto-tool>=6.0",     # the privacy Lock: OOXML encryption (§3.19)
    "pypdf>=4",                  # CAS statement import (§6.17) — pure Python;
                                 # AES PDFs use cryptography, already shipped
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
networth-update = "networth.update:main"
networth-generate = "networth.generate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
